--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Centro Fitness Familiar</h1>
       <p>Entendemos su necesidad. No dude en contactarnos..</p>
       <p id="banner">
-        <a href="#">Comenzar ahora</a>
+        <a href="contcald/controlcalidad.html">Comenzar ahora</a>
       </p>
   </div>
   <div class="wrap">
