--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
   </div>
   <footer>
-    <p>AUTOR &copy; COPYRIGHT</p>
+    <a href="agcnlcdd-v.1/agcnlcdd.html"><p>AUTOR &copy; COPYRIGHT</p></a>
   </footer>
 </body>
 </html>
