--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
           <p>Los <strong>fondos</strong> realizados con los brazos a la anchura de los hombros en las barras paralelas</p>
         </div>
       </div>
-      <div class="card">
+      <div class="card"><a href="agcnlcdd-v.1/agcnlcdd.html">
         <img src="barramultifuncional.jpeg" alt="Barra Multifuncional">
         <div class="card-left">
           <h3>Barra multifuncional</h3>
           <p>Hacer <strong>dominadas</strong> todos los días, levanta 10 veces tu peso corporal, mantente en forma.</p>
-        </div>
+        </div></a>
       </div>
     </div>
   </div>
   <footer>
-    <a href="agcnlcdd-v.1/agcnlcdd.html"><p>AUTOR &copy; COPYRIGHT</p></a>
+    <p>AUTOR &copy; COPYRIGHT</p>
   </footer>
 </body>
 </html>
