--- a/agcnlcdd-v.1/ingresayconsulta.html
+++ b/agcnlcdd-v.1/ingresayconsulta.html
@@ -122,7 +122,7 @@ select{
         <input type="text" class="form-control" id="cantidad" value="" placeholder="N° de Pallets">
       </div>
     </div>
-    <a href="index.html" id="run1" class="btn btn-success"><span>Agregar</span></a><br>
+    <a href="agcnlcdd.html" id="run1" class="btn btn-success"><span>Agregar</span></a><br>
     <br>
     <h4>Detalle</h4>
     <p>
