--- a/agcnlcdd-v.1/agcnlcdd.html
+++ b/agcnlcdd-v.1/agcnlcdd.html
@@ -41,7 +41,7 @@
         </div>
       </div>
       <div class="card">
-        <a href="agetel/index.html">
+        <a href="agetel/agetel.html">
 	      <img src="barramultifuncional.jpeg" alt="Barra Multifuncional">
 		Comenzar ahora</a>
         <div class="card-left">
