--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <p>Los <strong>fondos</strong> realizados con los brazos a la anchura de los hombros en las barras paralelas</p>
         </div>
       </div>
-      <div class="card"><a href="agcnlcdd-v.1/agcnlcdd.html">
+      <div class="card"><a href="agcnlcdd-v.1/index.html">
         <img src="barramultifuncional.jpeg" alt="Barra Multifuncional">
         <div class="card-left">
           <h3>Barra multifuncional</h3>
