--- a/agcnlcdd-v.1/index.html
+++ b/agcnlcdd-v.1/index.html
@@ -43,7 +43,7 @@
         </div>
       </div>
       <div class="card">
-        <a href="agetel/index.html">
+        <a href="agetel/agetel.html">
 	      <img src="barramultifuncional.jpeg" alt="Barra Multifuncional">
 		</a>
         <div class="card-left">
