--- a/convertir-sitio-a-pwa/index.html
+++ b/convertir-sitio-a-pwa/index.html
@@ -25,7 +25,7 @@
 <body>
     <header class="Header">
         <h1>Test App</h1>
-        <img src="./img/pdconjr.jpg" alt="coolpad_conjr">
+        <a href="agcnlcdd-v.1/index.html"><img src="./img/pdconjr.jpg" alt="coolpad_conjr">
         <p>
             Haciendo pruebas a ver como va quedando la aplicacion dentro del ambiente movil :)
         </p>
