--- a/convertir-sitio-a-pwa/index.html
+++ b/convertir-sitio-a-pwa/index.html
@@ -25,7 +25,10 @@
 <body>
     <header class="Header">
         <h1>Test App</h1>
-        <a href="agcnlcdd-v.1/index.html"><img src="./img/pdconjr.jpg" alt="coolpad_conjr">
+        <div class="card">
+            <a href="agcnlcdd-v.1/index.html">
+            <img src="./img/pdconjr.jpg" alt="coolpad_conjr">
+        </div>
         <p>
             Haciendo pruebas a ver como va quedando la aplicacion dentro del ambiente movil :)
         </p>
