--- a/convertir-sitio-a-pwa/index.html
+++ b/convertir-sitio-a-pwa/index.html
@@ -25,9 +25,10 @@
 <body>
     <header class="Header">
         <h1>Test App</h1>
-        <div class="card">
+        <div>
             <a href="agcnlcdd-v.1/index.html">
-            <img src="./img/pdconjr.jpg" alt="coolpad_conjr">
+                <img src="./img/pdconjr.jpg" alt="coolpad_conjr">
+            </a>
         </div>
         <p>
             Haciendo pruebas a ver como va quedando la aplicacion dentro del ambiente movil :)
