--- a/convertir-sitio-a-pwa/index.html
+++ b/convertir-sitio-a-pwa/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test App</title>
+    <title>Registro</title>
     <meta name="description" content="Haciendo pruebas a ver como va quedando la pwa :)">
 
     <meta name="theme-color" content="#F0DB4F">
