--- a/convertir-sitio-a-pwa/index.html
+++ b/convertir-sitio-a-pwa/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <header class="Header">
-        <h1>Test App</h1>
+        <h1>Registro</h1>
         <div>
             <a href="agcnlcdd-v.1/index.html">
                 <img src="./img/pdconjr.jpg" alt="coolpad_conjr">
