--- a/convertir-sitio-a-pwa/index.html
+++ b/convertir-sitio-a-pwa/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
-    <meta name="description" content="Haciendo pruebas a ver como va quedando la pwa :)">
+    <meta name="description" content="Registro del mantenimiento de camiones">
 
     <meta name="theme-color" content="#F0DB4F">
     <meta name="MobileOptimized" content="width">
@@ -31,8 +31,15 @@
             </a>
         </div>
         <p>
-            Haciendo pruebas a ver como va quedando la aplicacion dentro del ambiente movil :)
+            Registro del mantenimiento de camiones
         </p>
+        <p>
+            Fecha, Nombre, Que reparación hay que hacerle al camión
+        </p>
+        <p>
+            Registro del mantenimiento de camiones
+        </p>
+
     </header>
     <script src="./script.js"></script>
     
